--- a/index.html
+++ b/index.html
@@ -120,35 +120,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/recommend-1.jpeg" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/recommend-2.png" alt="Recommendation 2">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend3.jpg" alt="Recommendation 3">
+                            <img src="assets/recommend-3.jpg" alt="Recommendation 3">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend4.jpeg" alt="Recommendation 4">
+                            <img src="assets/recommend-4.jpeg" alt="Recommendation 4">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend5.ico" alt="Recommendation 5">
+                            <img src="assets/recommend-5.ico" alt="Recommendation 5">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend6.jpeg" alt="Recommendation 6">
+                            <img src="assets/recommend-6.jpeg" alt="Recommendation 6">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend7.jpeg" alt="Recommendation 7">
+                            <img src="assets/recommend-7.jpeg" alt="Recommendation 7">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend8.png" alt="Recommendation 8">
+                            <img src="assets/recommend-8.png" alt="Recommendation 8">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
@@ -163,35 +163,35 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/new-released-1.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend1.jpeg" alt="Recommendation 1">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/Recommend2.png" alt="Recommendation 2">
+                            <img src="assets/new-released-2.png" alt="Recommendation 1">
                             <div class="price-tag">$19.99</div>
                         </div>
                     </div>
@@ -206,36 +206,36 @@
                     <button class="body-carousel-button prev">&#10094;</button>
                     <div class="body-carousel-images">
                         <div class="image-wrapper">
-                            <img src="assets/free1.png" alt="Free 1">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-1.png" alt="Free 1">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free2.jpeg" alt="Free 2">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-2.jpeg" alt="Free 2">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free3.jpeg" alt="Free 3">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-3.jpeg" alt="Free 3">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free4.png" alt="Free 4">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-4.png" alt="Free 4">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free5.png" alt="Free 5">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-5.png" alt="Free 5">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free6.png" alt="Free 6">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-6.png" alt="Free 6">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free7.png" alt="Free 7">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-7.png" alt="Free 7">
+                            <div class="price-tag">Free</div>
                         </div>
                         <div class="image-wrapper">
-                            <img src="assets/free8.png" alt="Free 8">
-                            <div class="price-tag">$19.99</div>
+                            <img src="assets/free-8.png" alt="Free 8">
+                            <div class="price-tag">Free</div>
                         </div>
                     </div>
                     <button class="body-carousel-button next">&#10095;</button>
